--- a/public/index.html
+++ b/public/index.html
@@ -1,280 +1,184 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MISE - Scanner de Códigos de Barras</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <title>MISE - Scanner</title>
 
   <style>
     body {
       margin: 0;
-      font-family: "Inter", sans-serif;
-      background: #74f7eb;
+      font-family: Arial, sans-serif;
+      background: #7ff3e5;
       display: flex;
       justify-content: center;
-      padding: 30px 0;
+      padding: 20px;
     }
 
     .container {
-      background: white;
-      padding: 35px;
-      border-radius: 22px;
+      width: 100%;
       max-width: 420px;
-      width: 92%;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+      background: white;
+      border-radius: 20px;
+      padding: 25px;
+      box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.15);
       text-align: center;
     }
 
     .logo {
       width: 150px;
-      margin: auto;
+      margin: 0 auto 15px;
+      display: block;
     }
 
     h2 {
-      margin-top: 15px;
-      font-size: 19px;
-      color: #333;
-      font-weight: 600;
-    }
-
-    .input-box {
-      margin: 20px 0;
+      margin-top: 5px;
+      font-weight: bold;
+      color: #222;
     }
 
     input {
       width: 100%;
-      padding: 14px;
+      padding: 12px;
+      margin-top: 10px;
+      border: 2px solid #ccc;
       border-radius: 10px;
-      border: 2px solid #d7d7d7;
-      font-size: 17px;
-      outline: none;
-      transition: .2s;
+      font-size: 18px;
+      text-align: center;
     }
 
-    input:focus {
-      border-color: #00c2b3;
-      box-shadow: 0 0 0 2px rgba(0,194,179,0.25);
+    button {
+      width: 100%;
+      padding: 12px;
+      font-size: 18px;
+      margin-top: 15px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
     }
 
-    .teclado {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 14px;
-      margin-top: 25px;
+    #buscar {
+      background: #00c2a8;
+      color: white;
     }
 
-    .btn-tecla {
-      background: #f4f4f4;
+    #scanner {
+      background: #6a5acd;
+      color: white;
+    }
+
+    .produto-card {
+      background: #f2f2f2;
+      margin-top: 20px;
       padding: 18px;
       border-radius: 12px;
-      font-size: 20px;
-      cursor: pointer;
-      transition: 0.2s;
-      border: none;
-    }
-
-    .btn-tecla:hover {
-      background: #e8e8e8;
-    }
-
-    .btn-confirmar {
-      width: 100%;
-      background: #00a7ff;
-      color: white;
-      padding: 16px;
-      border-radius: 12px;
-      margin-top: 25px;
-      font-size: 17px;
-      border: none;
-      cursor: pointer;
-      transition: .2s;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 7px;
-    }
-
-    .btn-confirmar:hover {
-      background: #0088d6;
-    }
-
-    .btn-scanner {
-      width: 100%;
-      background: #8044ff;
-      color: white;
-      padding: 16px;
-      border-radius: 12px;
-      margin-top: 12px;
-      font-size: 17px;
-      border: none;
-      cursor: pointer;
-      transition: .2s;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 7px;
-    }
-
-    .btn-scanner:hover {
-      background: #6937d1;
-    }
-
-    #produto-card {
-      margin-top: 30px;
-      padding: 18px;
-      border-radius: 16px;
-      background: #f3f8ff;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
       text-align: left;
-      display: none;
+    }
+
+    .produto-card h3 {
+      margin: 0;
+      font-size: 20px;
     }
 
     .badge {
-      padding: 4px 10px;
+      display: inline-block;
+      padding: 5px 10px;
+      margin-top: 5px;
+      border-radius: 8px;
       font-size: 12px;
-      border-radius: 6px;
-      margin-left: 6px;
-      font-weight: 600;
-      color: white;
+      font-weight: bold;
     }
 
-    .badge.local { background: #0088ff; }
-    .badge.online { background: #00c45a; }
-
-    .produto-foto img {
-      width: 100%;
-      max-width: 290px;
-      border-radius: 14px;
-      margin: 10px auto;
-      display: block;
+    .local {
+      background: #f4a261;
+      color: white;
+    }
+    .cosmos {
+      background: #008cff;
+      color: white;
+    }
+    .openfood {
+      background: #2a9d8f;
+      color: white;
     }
 
   </style>
 </head>
+
 <body>
 
-<div class="container">
+  <div class="container">
 
-  <img src="logo-mise.png" class="logo" alt="MISE">
+    <img src="logo-mise.png" class="logo" />
 
-  <h2>Scanner de Códigos de Barras</h2>
+    <h2>Scanner de Códigos de Barras</h2>
 
-  <div class="input-box">
-    <input id="campoCodigo" placeholder="Digite ou escaneie o código">
+    <!-- INPUT ORIGINAL COM TECLADO NATIVO DO CELULAR -->
+    <input 
+        id="codigo" 
+        type="number" 
+        placeholder="Digite ou escaneie o código" 
+        inputmode="numeric"
+        pattern="[0-9]*"
+    />
+
+    <button id="buscar">🔍 Buscar Produto</button>
+    <button id="scanner">📷 Scanner</button>
+
+    <div id="resultado"></div>
   </div>
 
-  <!-- TECLADO NUMÉRICO -->
-  <div class="teclado">
-    <button class="btn-tecla">1</button>
-    <button class="btn-tecla">2</button>
-    <button class="btn-tecla">3</button>
+  <script>
+    const input = document.getElementById("codigo");
+    const resultado = document.getElementById("resultado");
 
-    <button class="btn-tecla">4</button>
-    <button class="btn-tecla">5</button>
-    <button class="btn-tecla">6</button>
+    // ENTER dispara busca
+    input.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") buscar();
+    });
 
-    <button class="btn-tecla">7</button>
-    <button class="btn-tecla">8</button>
-    <button class="btn-tecla">9</button>
+    document.getElementById("buscar").onclick = buscar;
 
-    <button class="btn-tecla" id="clear">⌫</button>
-    <button class="btn-tecla">0</button>
-    <button class="btn-tecla" id="reset">C</button>
-  </div>
-
-  <button class="btn-confirmar" onclick="buscarProduto()">
-    🔍 Buscar Produto
-  </button>
-
-  <button class="btn-scanner" onclick="iniciarScanner()">
-    📷 Scanner
-  </button>
-
-  <div id="produto-card"></div>
-
-</div>
-
-
-<!-- ========================= -->
-<!-- S C R I P T S  -->
-<!-- ========================= -->
-
-<script>
-  const campo = document.getElementById("campoCodigo");
-
-  // Teclado numérico
-  document.querySelectorAll(".btn-tecla").forEach(btn => {
-    btn.onclick = () => {
-      const v = btn.textContent.trim();
-      if (v === "⌫") campo.value = campo.value.slice(0, -1);
-      else if (v === "C") campo.value = "";
-      else campo.value += v;
-    };
-  });
-
-  // Função principal
-  async function buscarProduto() {
-    const codigo = campo.value.trim();
-    if (!codigo) return alert("Digite um código");
-
-    const resp = await fetch(`/consulta/${codigo}`);
-    const data = await resp.json();
-
-    mostrarProduto(data);
-  }
-
-  // Exibir card do produto
-  function mostrarProduto(data) {
-    const card = document.getElementById("produto-card");
-    card.style.display = "block";
-
-    if (!data.ok) {
-      card.innerHTML = `<strong>${data.mensagem}</strong>`;
-      return;
-    }
-
-    const p = data.produto;
-
-    const nome = p.produto || p.nome || "(Sem nome)";
-    const origem = data.origem;
-
-    let html = `
-      <div style="font-size:19px; font-weight:600; margin-bottom:4px;">
-        ${nome}
-        <span class="badge ${origem}">${origem === "local" ? "📦 Base" : "🌐 Online"}</span>
-      </div>
-    `;
-
-    if (p.codigo || p["cod de barra"]) {
-      const codigo = p.codigo || p["cod de barra"];
-
-      html += `
-        <div class="produto-foto">
-          <img src="/foto/${codigo}" 
-               alt="Foto do produto"
-               onerror="this.style.display='none'">
+    function mostrarProduto(nome, origem, codigo) {
+      resultado.innerHTML = `
+        <div class="produto-card">
+          <h3>${nome}</h3>
+          <span class="badge ${origem}">
+            ${origem === "local" ? "📦 Base Local" : origem === "cosmos" ? "🌐 Cosmos" : "🥫 OpenFoodFacts"}
+          </span>
+          <p><b>Código:</b> ${codigo}</p>
         </div>
       `;
     }
 
-    html += `
-      <div><strong>Código:</strong> ${p.codigo || p["cod de barra"]}</div>
-      <div><strong>Grupo:</strong> ${p.grupo || ""}</div>
-      <div><strong>Marca:</strong> ${p.marca || ""}</div>
-      <div><strong>Categoria:</strong> ${p.categoria || ""}</div>
-    `;
+    async function buscar() {
+      const codigo = input.value.replace(/\D/g, "");
 
-    card.innerHTML = html;
-  }
+      if (!codigo) {
+        resultado.innerHTML = "<p>Digite um código válido.</p>";
+        return;
+      }
 
+      resultado.innerHTML = "<p>⏳ Buscando...</p>";
 
-  // Scanner simples (usa câmera)
-  function iniciarScanner() {
-    alert("Scanner será integrado aqui (já suportado no server).");
-  }
-</script>
+      const resp = await fetch(`/consulta/${codigo}`);
+      const data = await resp.json();
 
+      if (!data.ok) {
+        resultado.innerHTML = "<p>❌ Produto não encontrado.</p>";
+        return;
+      }
+
+      mostrarProduto(data.produto.nome, data.origem, data.produto.codigo);
+    }
+
+    // FUTURO: scanner (deixo botão pronto)
+    document.getElementById("scanner").onclick = () => {
+      alert("Scanner será ativado aqui (colocaremos depois)");
+    };
+
+  </script>
 </body>
 </html>
